--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/switch": "^2.0.31",
+    "@prisma/client": "5.15.1",
+    "@vercel/postgres": "^0.9.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "framer-motion": "^11.2.11",
     "next": "14.2.4",
     "next-themes": "^0.2.1",
@@ -24,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.4"
   }
 }
