ci: 增加上传图片

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_URL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7-pooler.us-east-1.aws.neon.tech:5432/verceldb"
 POSTGRES_URL_NON_POOLING="postgres://default:GlQzSqCZ4t3w@ep-shy-pine-a4iqk6l7.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_USER="default"
 POSTGRES_HOST="ep-shy-pine-a4iqk6l7-pooler.us-east-1.aws.neon.tech"
