--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-shy-pine-a4iqk6l7-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="GlQzSqCZ4t3w"
 POSTGRES_DATABASE="verceldb"
+
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_glVeHqUPVg1nkkEB_DrDZrhyY82MKf2W8Orvp3pc6jAbndS"
