--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/switch": "^2.0.31",
     "@prisma/client": "5.15.1",
+    "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
+    "ahooks": "^3.8.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.11",
