--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
