--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
     "ahooks": "^3.8.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.11",
+    "marked": "4.3.0",
     "next": "14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18",
